[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Game Master.gd" type="Script" id=3]
[ext_resource path="res://scenes/Lava.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.6667, 24 )

[node name="Node2D" type="Node2D"]

[node name="Game Master" type="Node" parent="."]
script = ExtResource( 3 )

[node name="StartPoint" type="Node2D" parent="Game Master"]
position = Vector2( 72, 56 )

[node name="Player" parent="Game Master" instance=ExtResource( 1 )]
position = Vector2( 72, 56 )
collision_layer = 1025
collision_mask = 1025

[node name="Camera2D" type="Camera2D" parent="Game Master/Player"]
current = true

[node name="Floor" parent="Game Master" instance=ExtResource( 2 )]
position = Vector2( 64, 128 )
scale = Vector2( 12.04, 1 )

[node name="Floor2" parent="Game Master" instance=ExtResource( 2 )]
position = Vector2( 296, 168 )
scale = Vector2( 12.04, 1 )

[node name="Floor3" parent="Game Master" instance=ExtResource( 2 )]
position = Vector2( 512, 192 )
scale = Vector2( 12.04, 1 )

[node name="Lava" parent="Game Master" instance=ExtResource( 4 )]
position = Vector2( 0, 304 )
scale = Vector2( 63, 6.2 )

[node name="UI" type="Control" parent="Game Master"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="Game Master/UI"]

[node name="LoseScreen" type="ColorRect" parent="Game Master/UI/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.996078, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Game Master/UI/CanvasLayer/LoseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 48.0
margin_bottom = 7.0
text = "YOU LOSE "
align = 1

[node name="WinScreen" type="ColorRect" parent="Game Master/UI/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.164706, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Game Master/UI/CanvasLayer/WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 44.0
margin_bottom = 7.0
text = "YOU WIN "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinDoor" type="Area2D" parent="Game Master"]
position = Vector2( 680, 176 )
collision_layer = 1024
collision_mask = 1024
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game Master/WinDoor"]
position = Vector2( 0, -24 )
scale = Vector2( 0.96, 1 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Game Master/WinDoor"]
color = Color( 0.054902, 0.027451, 0.976471, 1 )
polygon = PoolVector2Array( -16, 0, -16, -48, 16, -48, 16, 0 )
[connection signal="body_shape_entered" from="Game Master/Lava" to="Game Master" method="_on_Lava_body_shape_entered"]
[connection signal="body_entered" from="Game Master/WinDoor" to="Game Master" method="_on_WinDoor_body_entered"]
